packages/next-swc/crates/core/tests/errors/server-actions/server-graph/8/output.js
/* __next_internal_action_entry_do_not_use__ $$ACTION_1 */ import __create_action_proxy__ from "private-next-rsc-action-proxy";
const foo = ($$ACTION_0 = async (...args)=>$$ACTION_1(($$ACTION_0.$$bound || []).concat(args)), $$ACTION_0.$$typeof = Symbol.for("react.server.reference"), $$ACTION_0.$$id = "188d5d945750dc32e2c842b93c75a65763d4a922", $$ACTION_0.$$bound = null, __create_action_proxy__($$ACTION_0, $$ACTION_1), $$ACTION_0);
export const $$ACTION_1 = async (closure)=>{
    'use strict';
};
var $$ACTION_0;
const bar = async ()=>{
    const x = 1;
    // prettier-ignore
    'use server';
};
